Preapare base for frontend-backend training schedule connection
